Use Builder pattern and change the way a collection is created